# teensy_logger

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FreeRTOSConfig.h
board/: board.c  board.h  pin_mux.c
cmake/: MIMXRT1062_flash.ld  gen_build_epoch.cmake  toolchain-arm-none-eabi.cmake
device/: system_MIMXRT1062.c
drivers/: fsl_common_arm.h  fsl_flexcan.c  fsl_flexcan.h
middleware/usb/device/: usb_device_ehci.c
middleware/usb/include/: usb.h
source/: FreeRTOS_CLI.c  FreeRTOS_CLI.h  ffconf.h  led_blinky.c  led_blinky_can_core_mf4.c  led_blinky_can_shell_gs.c  led_blinky_data.c  led_blinky_rtc_fs.c  led_blinky_shared.h  led_blinky_usb_shell.c  led_blinky_usb_tasks_main.c  sdmmc_config.c  sdmmc_config.h  usb_device_config.h  usb_device_descriptor.c  usb_device_descriptor.h
source/app/: app_shared.h  led_blinky_can_core_mf4.inc  led_blinky_can_shell_gs.inc  led_blinky_rtc_fs.inc  led_blinky_usb_shell.inc  led_blinky_usb_tasks_main.inc  main.c
source/app/can/: can_core_mf4.c  can_shell_gs.c
source/app/core/: app_data.c  app_tasks.c
source/app/storage/: rtc_fs.c
source/app/usb/: usb_device_runtime.c  usb_msc_disk.c  usb_shell.c
startup/: startup_mimxrt1062.c
tools/: can_loop_verify.sh  flash_no_button.sh  time_set_host.sh
xip/: fsl_flexspi_nor_boot.h
